Fixing page height on mobile browser

--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,6 @@ code {
 }
 
 .mainContainer {
-  height: 100vh;
+  height: 100dvh;
+  max-height: -webkit-fill-available;
 }
